--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ $cube-width:400px;
       height: 100%;
       position: relative;
       transform-style: preserve-3d;
+      transform: translateZ((-$cube-width / 2));
       // transform: rotateX(45deg) rotateY(45deg);
       .face {
         position: absolute;
