--- a/css/layout.css
+++ b/css/layout.css
@@ -10,11 +10,11 @@ img { vertical-align: top; }
 
 .hidden { display: none; }
 
-#header { position: fixed; width: 100%; height: 50px; background-color: #fff; -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); z-index: 100; }
+#header { position: fixed; width: 100%; height: 50px; background-color: #fff; -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); z-index: 100; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-#header #logo { position: absolute; height: 50px; padding: 10px 20px; }
+#header #logo { font-size: 24px; font-weight: 300; text-transform: uppercase; }
 
-#header #logo img { height: 30px; }
+#header #logo strong { font-weight: 700; }
 
 #header #gnb ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
