--- a/css/main02.css
+++ b/css/main02.css
@@ -4,7 +4,7 @@
 
 #main .scene .carousel { width: 100%; height: 100%; position: relative; -webkit-transform-style: preserve-3d; transform-style: preserve-3d; }
 
-#main .scene .carousel .face { position: absolute; width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; background-color: #111; color: #fff; font-size: 36px; font-weight: 700; opacity: 0.5; }
+#main .scene .carousel .face { position: absolute; width: 100%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; background-color: #111; color: #fff; font-size: 36px; font-weight: 700; }
 
 #main .scene .carousel .face:nth-child(10n+1) { -webkit-transform: rotateY(0) translateZ(2240px); transform: rotateY(0) translateZ(2240px); background-color: #f00; }
 
@@ -26,10 +26,8 @@
 
 #main .scene .carousel .face:nth-child(10n+10) { -webkit-transform: rotateY(270deg) translateZ(2240px); transform: rotateY(270deg) translateZ(2240px); background-color: #0aa; }
 
-#main .pagination { position: absolute; bottom: 50px; width: 100%; }
+#main .pagination { position: absolute; bottom: 50px; width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; color: #fff; }
 
-#main .pagination ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+#main .pagination button { cursor: pointer; }
 
-#main .pagination ul li { width: 30px; height: 30px; border: 2px solid #000; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; background-color: #fff; margin: 0 2px; cursor: pointer; -webkit-transition: 0.25s; transition: 0.25s; }
-
-#main .pagination ul li.on { background-color: #000; color: #fff; }
+#main .pagination .material-icons { font-size: 48px; color: #fff; }
