--- a/scss/main03.scss
+++ b/scss/main03.scss
@@ -1,6 +1,6 @@
 @import "vars";
 @import "mixins";
-$cube-width:80px;
+$cube-width: 80px;
 
 #main {
   display: flex;
@@ -8,7 +8,7 @@ $cube-width:80px;
   align-items: center;
   width: 100%;
   height: 100vh;
-  #cubeBox{
+  #cubeBox {
     width: calc(81px * 20);
     display: flex;
     justify-content: start;
@@ -39,28 +39,59 @@ $cube-width:80px;
         font-weight: 200;
         overflow: hidden;
         text-transform: uppercase;
-        &.right{transform: rotateY(90deg) translateZ($cube-width / 2); background-color: #f00; @include longShadow(darken(#f00,10),right,100)}
-        &.left{transform: rotateY(-90deg) translateZ($cube-width / 2); background-color: #ff0; @include longShadow(darken(#ff0,10),right,100)}
-        &.top{transform: rotateX(90deg) translateZ($cube-width / 2); background-color: #f0f; @include longShadow(darken(#f0f,10),right,100)}
-        &.bottom{transform: rotateX(-90deg) translateZ($cube-width / 2); background-color: #0f0; @include longShadow(darken(#0f0,10),right,100)}
-        &.front{transform: rotateY(0deg) translateZ($cube-width / 2); background-color: #0ff; @include longShadow(darken(#0ff,10),right,100)}
-        &.back{transform: rotateY(180deg) translateZ($cube-width / 2); background-color: #00f; @include longShadow(darken(#00f,10),right,100)}
+        &.right {
+          transform: rotateY(90deg) translateZ($cube-width / 2);
+          background-color: #f00;
+          @include longShadow(darken(#f00, 10), right, 100);
+        }
+        &.left {
+          transform: rotateY(-90deg) translateZ($cube-width / 2);
+          background-color: #ff0;
+          @include longShadow(darken(#ff0, 10), right, 100);
+        }
+        &.top {
+          transform: rotateX(90deg) translateZ($cube-width / 2);
+          background-color: #f0f;
+          @include longShadow(darken(#f0f, 10), right, 100);
+        }
+        &.bottom {
+          transform: rotateX(-90deg) translateZ($cube-width / 2);
+          background-color: #0f0;
+          @include longShadow(darken(#0f0, 10), right, 100);
+        }
+        &.front {
+          transform: rotateY(0deg) translateZ($cube-width / 2);
+          background-color: #0ff;
+          @include longShadow(darken(#0ff, 10), right, 100);
+        }
+        &.back {
+          transform: rotateY(180deg) translateZ($cube-width / 2);
+          background-color: #00f;
+          @include longShadow(darken(#00f, 10), right, 100);
+        }
       }
     }
   }
-  .pagination{
+  .pagination {
     position: absolute;
-    bottom:50px;
+    bottom: 50px;
     width: 100%;
     display: flex;
-    ul{
+    justify-content: center;
+    ul {
       display: flex;
       justify-content: center;
+      transition: 0.5s;
+      &.off {
+        pointer-events: none;
+        opacity: 0.5;
+      }
     }
-    .pause{
+    .pause {
       display: none;
     }
-    li,button{
+    li,
+    button {
       width: 30px;
       height: 30px;
       border: 2px solid #000;
@@ -71,7 +102,7 @@ $cube-width:80px;
       margin: 0 2px;
       cursor: pointer;
       transition: 0.25s;
-      &.on{
+      &.on {
         background-color: #000;
         color: #fff;
       }
